<?xml version="1.0" encoding="utf-8"?>
<!-- Landing Page -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lP_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/landing_page_title"
        android:textSize="80sp"
        android:textStyle="bold"
        android:textColor="@color/very_light_blue"
        android:fontFamily="cursive"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lp_register_button"
        android:layout_below="@id/lP_title"
        android:src="@drawable/lp_family_image"/>

    <Button
        android:id="@+id/lp_register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lp_login_button"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/transparent_button"
        android:text="@string/register_family"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textSize="20sp" />

    <Button
        android:id="@+id/lp_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_alignParentBottom="true"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:textColor="@color/blue"
        android:textAllCaps="false"
        android:background="@drawable/transparent_button" />

</RelativeLayout>